# ML

./: .gitignore  README  attractors.py  data_generation.py  gen_attractor.ipynb  main.ipynb  pyproject.toml
